--- a/Camden Stuff/.classpath
+++ b/Camden Stuff/.classpath
@@ -13,5 +13,6 @@
 	</classpathentry>
 	<classpathentry kind="con" path="org.eclipse.jdt.USER_LIBRARY/Java JSON"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.USER_LIBRARY/Java JSON Simple"/>
+	<classpathentry kind="lib" path="C:/Users/thund/OneDrive/Desktop/Programming/gson-2.9.0.jar"/>
 	<classpathentry kind="output" path=""/>
 </classpath>
